# mps-kernels-skill

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  MANIFEST.in  README.md  RELEASE_CHECKLIST.md  SECURITY.md  pyproject.toml
.github/workflows/: ci.yml
docs/: USING_WITH_CLAUDE_CODE.md  USING_WITH_CODEX_CHATGPT.md
skill/: SKILL.md  __init__.py  manifest.txt
skill/kernels/: __init__.py  autotune_cache.py  utils.py
skill/references/: apple-silicon-optimization-guide.md  attention-kernel-guide.md  attention-variants-guide.md  cuda-to-metal-guide.md  extension-patterns.md  kernel-debugging-walkthrough.md  kernel-templates.md  metal-4-spec-notes.md  mps-kernel-patterns.md  multi-dim-grid-patterns.md  production-error-handling.md  profiling-guide.md  pytorch-integration.md  pytorch-mps-kernel-api.md  quantized-kernel-patterns.md  simdgroup-matrix-guide.md  testing-patterns.md  torch-compile-interaction.md  troubleshooting.md
skill/scripts/: __init__.py  attention_kernel.py  attention_variants_kernel.py  batch_elementwise_kernel.py  bench_all.py  benchmark_rmsnorm.py  dequant_matvec_kernel.py  e2e_custom_kernels.py  layernorm_kernel.py  mps_compile_shader_quickstart.py  multihead_rope_kernel.py  rmsnorm_kernel.py  simdgroup_matmul_kernel.py  softmax_kernel.py
skill/tests/: __init__.py  smoke_test.py
