[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mps-kernels-skill"
version = "0.1.0"
description = "Practical patterns and examples for building custom Metal kernels with PyTorch MPS on Apple Silicon."
authors = [
    { name = "ssmall256" },
]
license = { text = "MIT" }
readme = "README.md"
requires-python = ">=3.10"
keywords = ["pytorch", "mps", "metal", "apple-silicon", "kernel"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: MacOS",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "torch>=2.3",
]

[project.optional-dependencies]
dev = [
    "mypy>=1.8",
    "pytest>=8.0",
    "ruff>=0.4",
]

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
include = ["skill*"]

[tool.setuptools.package-data]
skill = ["SKILL.md", "manifest.txt", "references/*.md"]

[tool.ruff]
target-version = "py310"
src = ["skill"]

[tool.ruff.lint]
select = ["F"]

[tool.mypy]
python_version = "3.10"
ignore_missing_imports = true
check_untyped_defs = true
warn_unused_ignores = true
files = ["skill"]
